@@ -2,32 +2,32 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
- * This library is free software; you can redistribute it and/or modify it 
- * under the terms of the GNU Lesser General Public License as published by 
- * the Free Software Foundation; either version 2.1 of the License, or 
+ * This library is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation; either version 2.1 of the License, or
  * (at your option) any later version.
  *
- * This library is distributed in the hope that it will be useful, but 
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
- * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public 
+ * This library is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public
  * License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, 
- * USA.  
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
+ * USA.
  *
- * [Java is a trademark or registered trademark of Sun Microsystems, Inc. 
+ * [Java is a trademark or registered trademark of Sun Microsystems, Inc.
  * in the United States and other countries.]
  *
  * --------------------
  * XIntervalSeries.java
  * --------------------
- * (C) Copyright 2006, 2007, by Object Refinery Limited.
+ * (C) Copyright 2006-2008, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -35,6 +35,7 @@
  * Changes
  * -------
  * 20-Oct-2006 : Version 1 (DG);
+ * 11-Apr-2008 : Added getXLowValue() and getXHighValue() methods (DG);
  *
  */
 
@@ -51,10 +52,10 @@ import org.jfree.data.ComparableObjectSeries;
  * @see XIntervalSeriesCollection
  */
 public class XIntervalSeries extends ComparableObjectSeries {
-    
+
     /**
-     * Creates a new empty series.  By default, items added to the series will 
-     * be sorted into ascending order by x-value, and duplicate x-values will 
+     * Creates a new empty series.  By default, items added to the series will
+     * be sorted into ascending order by x-value, and duplicate x-values will
      * be allowed (these defaults can be modified with another constructor.
      *
      * @param key  the series key (<code>null</code> not permitted).
@@ -62,22 +63,22 @@ public class XIntervalSeries extends ComparableObjectSeries {
     public XIntervalSeries(Comparable key) {
         this(key, true, true);
     }
-    
+
     /**
-     * Constructs a new xy-series that contains no data.  You can specify 
+     * Constructs a new xy-series that contains no data.  You can specify
      * whether or not duplicate x-values are allowed for the series.
      *
      * @param key  the series key (<code>null</code> not permitted).
-     * @param autoSort  a flag that controls whether or not the items in the 
+     * @param autoSort  a flag that controls whether or not the items in the
      *                  series are sorted.
-     * @param allowDuplicateXValues  a flag that controls whether duplicate 
+     * @param allowDuplicateXValues  a flag that controls whether duplicate
      *                               x-values are allowed.
      */
-    public XIntervalSeries(Comparable key, boolean autoSort, 
+    public XIntervalSeries(Comparable key, boolean autoSort,
             boolean allowDuplicateXValues) {
         super(key, autoSort, allowDuplicateXValues);
     }
-    
+
     /**
      * Adds a data item to the series.
      *
@@ -89,7 +90,7 @@ public class XIntervalSeries extends ComparableObjectSeries {
     public void add(double x, double xLow, double xHigh, double y) {
         super.add(new XIntervalDataItem(x, xLow, xHigh, y), true);
     }
-    
+
     /**
      * Returns the x-value for the specified item.
      *
@@ -101,7 +102,35 @@ public class XIntervalSeries extends ComparableObjectSeries {
         XIntervalDataItem item = (XIntervalDataItem) getDataItem(index);
         return item.getX();
     }
-    
+
+    /**
+     * Returns the lower bound of the x-interval for the specified item.
+     *
+     * @param index  the item index.
+     *
+     * @return The lower bound of the x-interval.
+     *
+     * @since 1.0.10
+     */
+    public double getXLowValue(int index) {
+        XIntervalDataItem item = (XIntervalDataItem) getDataItem(index);
+        return item.getXLowValue();
+    }
+
+    /**
+     * Returns the upper bound of the x-interval for the specified item.
+     *
+     * @param index  the item index.
+     *
+     * @return The upper bound of the x-interval.
+     *
+     * @since 1.0.10
+     */
+    public double getXHighValue(int index) {
+        XIntervalDataItem item = (XIntervalDataItem) getDataItem(index);
+        return item.getXHighValue();
+    }
+
     /**
      * Returns the y-value for the specified item.
      *
@@ -113,16 +142,16 @@ public class XIntervalSeries extends ComparableObjectSeries {
         XIntervalDataItem item = (XIntervalDataItem) getDataItem(index);
         return item.getYValue();
     }
-    
+
     /**
      * Returns the data item at the specified index.
-     * 
+     *
      * @param index  the item index.
-     * 
+     *
      * @return The data item.
      */
     public ComparableObjectItem getDataItem(int index) {
         return super.getDataItem(index);
     }
-    
+
 }
